--- a/lang/es.json
+++ b/lang/es.json
@@ -277,5 +277,24 @@
     "Remove provider": "Eliminar proveedor",
     "Provider": "Proveedor",
     "Are you sure you wanna remove this account from service providers ?": "¿Estás seguro/a de que deseas eliminar esta cuenta de los proveedores de servicios?",
-    "Are you sure you wanna make this account a service provider ?": "¿Estás seguro/a de que deseas hacer de esta cuenta un proveedor de servicios?"
+    "Are you sure you wanna make this account a service provider ?": "¿Estás seguro/a de que deseas hacer de esta cuenta un proveedor de servicios?",
+    "Reserve home courses": "Reservar cursos a domicilio",
+    "Reserve a home course": "Reservar un curso a domicilio",
+    "Give us details about the course": "Danos detalles sobre el curso",
+    "Desired course": "Curso deseado",
+    "Where ? When ?": "¿Dónde? ¿Cuándo?",
+    "Enter your address": "Ingrese su dirección",
+    "Send the request": "Enviar la solicitud",
+    "Request pending": "Solicitud pendiente",
+    "Request assigned": "Solicitud asignada",
+    "Request rejected": "Solicitud rechazada",
+    "Assigned to": "Asignado a",
+    "Assign the request": "Asignar la solicitud",
+    "Close": "Cerrar",
+    "Assign": "Asignar",
+    "See More": "Ver más",
+    "Select a provider": "Seleccionar un proveedor",
+    "Not assigned": "No asignado",
+    "Start Time": "Hora de inicio",
+    "End Time": "Hora de finalización"
 }
