--- a/lang/kr.json
+++ b/lang/kr.json
@@ -277,5 +277,24 @@
     "Remove provider": "제공자 제거",
     "Provider": "제공자",
     "Are you sure you wanna remove this account from service providers ?": "이 계정을 서비스 제공자에서 제거하시겠습니까?",
-    "Are you sure you wanna make this account a service provider ?": "이 계정을 서비스 제공자로 만드시겠습니까?"
+    "Are you sure you wanna make this account a service provider ?": "이 계정을 서비스 제공자로 만드시겠습니까?",
+    "Reserve home courses": "홈 코스 예약",
+    "Reserve a home course": "홈 코스 예약",
+    "Give us details about the course": "코스에 대한 세부 정보를 알려주세요",
+    "Desired course": "원하는 코스",
+    "Where ? When ?": "어디서? 언제?",
+    "Enter your address": "주소를 입력하세요",
+    "Send the request": "요청 보내기",
+    "Request pending": "요청 대기 중",
+    "Request assigned": "요청이 할당되었습니다",
+    "Request rejected": "요청이 거부되었습니다",
+    "Assigned to": "할당된 사람",
+    "Assign the request": "요청 할당",
+    "Close": "닫기",
+    "Assign": "할당",
+    "See More": "더 보기",
+    "Select a provider": "제공자 선택",
+    "Not assigned": "할당되지 않음",
+    "Start Time": "시작 시간",
+    "End Time": "종료 시간"
 }
