Added lang translation + live streaming.

--- a/lang/es.json
+++ b/lang/es.json
@@ -306,5 +306,25 @@
     "Open event calendar": "Abrir calendario de eventos",
     "Comment added successfully.": "Comentario agregado exitosamente.",
     "Comment deleted successfully.": "Comentario eliminado exitosamente.",
-    "You are not authorized to delete this comment.": "No tienes autorización para eliminar este comentario."
+    "You are not authorized to delete this comment.": "No tienes autorización para eliminar este comentario.",
+    "Course": "Curso",
+    "Finished at": "Finalizado el",
+    "My planning": "Mi planificación",
+    "My finished courses": "Mis cursos finalizados",
+    "My formations": "Mis formaciones",
+    "Number of courses": "Número de cursos",
+    "Is finished": "Está finalizado",
+    "Get the certification": "Obtener la certificación",
+    "Take the formation": "Tomar la formación",
+    "Add a formation": "Agregar una formación",
+    "Formations list": "Lista de formaciones",
+    "Enter the name of the formation": "Ingresa el nombre de la formación",
+    "Formation description": "Descripción de la formación",
+    "Formation taken": "Formación tomada",
+    "You already have this formation": "Ya tienes esta formación",
+    "You don't have completed all the courses required for this certification": "No has completado todos los cursos requeridos para esta certificación",
+    "Courses added.": "Cursos agregados.",
+    "Formation deleted.": "Formación eliminada.",
+    "Formation updated.": "Formación actualizada.",
+    "Formation created.": "Formación creada."
 }
