--- a/lang/fr.json
+++ b/lang/fr.json
@@ -319,5 +319,25 @@
     "Open event calendar": "Ouvrir le calendrier des événements",
     "Comment added successfully.": "Commentaire ajouté avec succès.",
     "Comment deleted successfully.": "Commentaire supprimé avec succès.",
-    "You are not authorized to delete this comment.": "Vous n'êtes pas autorisé à supprimer ce commentaire."
+    "You are not authorized to delete this comment.": "Vous n'êtes pas autorisé à supprimer ce commentaire.",
+    "Course": "Cours",
+    "Finished at": "Terminé le",
+    "My planning": "Mon planning",
+    "My finished courses": "Mes cours terminés",
+    "My formations": "Mes formations",
+    "Number of courses": "Nombre de cours",
+    "Is finished": "Est terminé",
+    "Get the certification": "Obtenir la certification",
+    "Take the formation": "Suivre la formation",
+    "Add a formation": "Ajouter une formation",
+    "Formations list": "Liste des formations",
+    "Enter the name of the formation": "Entrez le nom de la formation",
+    "Formation description": "Description de la formation",
+    "Formation taken": "Formation suivie",
+    "You already have this formation": "Vous avez déjà cette formation",
+    "You don't have completed all the courses required for this certification": "Vous n'avez pas terminé tous les cours requis pour cette certification",
+    "Courses added.": "Cours ajoutés.",
+    "Formation deleted.": "Formation supprimée.",
+    "Formation updated.": "Formation mise à jour.",
+    "Formation created.": "Formation créée."
 }
