--- a/lang/kr.json
+++ b/lang/kr.json
@@ -306,5 +306,25 @@
     "Open event calendar": "이벤트 달력 열기",
     "Comment added successfully.": "댓글이 성공적으로 추가되었습니다.",
     "Comment deleted successfully.": "댓글이 성공적으로 삭제되었습니다.",
-    "You are not authorized to delete this comment.": "이 댓글을 삭제할 권한이 없습니다."
+    "You are not authorized to delete this comment.": "이 댓글을 삭제할 권한이 없습니다.",
+    "Course": "강의",
+    "Finished at": "종료일",
+    "My planning": "나의 계획",
+    "My finished courses": "내가 마친 강의",
+    "My formations": "내 형성",
+    "Number of courses": "강의 수",
+    "Is finished": "완료됨",
+    "Get the certification": "자격증 획득",
+    "Take the formation": "형성 수강",
+    "Add a formation": "형성 추가",
+    "Formations list": "형성 목록",
+    "Enter the name of the formation": "형성의 이름을 입력하세요",
+    "Formation description": "형성 설명",
+    "Formation taken": "수강한 형성",
+    "You already have this formation": "이미 이 형성이 있습니다",
+    "You don't have completed all the courses required for this certification": "이 자격증에 필요한 모든 강의를 완료하지 않았습니다",
+    "Courses added.": "강의가 추가되었습니다.",
+    "Formation deleted.": "형성이 삭제되었습니다.",
+    "Formation updated.": "형성이 업데이트되었습니다.",
+    "Formation created.": "형성이 생성되었습니다."
 }
