--- a/lang/es.json
+++ b/lang/es.json
@@ -345,5 +345,26 @@
     "Select a provider": "Seleccionar un proveedor",
     "Not assigned": "No asignado",
     "Start Time": "Hora de inicio",
-    "End Time": "Hora de finalización"
+    "End Time": "Hora de finalización",
+    "Home courses list": "Lista de cursos a domicilio",
+    "Course at home": "Curso a domicilio",
+    "My courses at home": "Mis cursos a domicilio",
+    "You have sent your request": "Has enviado tu solicitud",
+    "Planning": "Planificación",
+    "Thank you for your order": "Gracias por tu pedido",
+    "Your order has been confirmed and will be processed as soon as possible.": "Tu pedido ha sido confirmado y será procesado lo antes posible.",
+    "Click": "Haz clic",
+    "here": "aquí",
+    "to download your invoices.": "para descargar tus facturas.",
+    "Copy the link below if you cannot click.": "Copia el enlace a continuación si no puedes hacer clic.",
+    "Please don't hesitate if you have any questions.": "Por favor, no dudes en contactarnos si tienes alguna pregunta.",
+    "Kind regards": "Atentamente",
+    "All formations": "Todas las formaciones",
+    "All courses": "Todos los cursos",
+    "Equipments list": "Lista de equipos",
+    "Create a room": "Crear una sala",
+    "Rooms list": "Lista de salas",
+    "Create a formation": "Crear una formación",
+    "Finished courses": "Cursos terminados",
+    "Taken formations": "Formaciones realizadas"
 }
