--- a/lang/fr.json
+++ b/lang/fr.json
@@ -358,5 +358,26 @@
     "Select a provider": "Sélectionner un prestataire",
     "Not assigned": "Non assigné",
     "Start Time": "Heure de début",
-    "End Time": "Heure de fin"
+    "End Time": "Heure de fin",
+    "Home courses list": "Liste des cours à domicile",
+    "Course at home": "Cours à domicile",
+    "My courses at home": "Mes cours à domicile",
+    "You have sent your request": "Vous avez envoyé votre demande",
+    "Planning": "Planning",
+    "Thank you for your order": "Merci pour votre commande",
+    "Your order has been confirmed and will be processed as soon as possible.": "Votre commande a été confirmée et sera traitée dès que possible.",
+    "Click": "Cliquez",
+    "here": "ici",
+    "to download your invoices.": "pour télécharger votre facture.",
+    "Copy the link below if you cannot click.": "Copiez le lien ci-dessous si vous ne pouvez pas cliquer.",
+    "Please don't hesitate if you have any questions.": "N'hésitez pas à nous contacter si vous avez des questions.",
+    "Kind regards": "Cordialement",
+    "All formations": "Toutes les formations",
+    "All courses": "Tous les cours",
+    "Equipments list": "Liste des équipements",
+    "Create a room": "Créer une salle",
+    "Rooms list": "Liste des salles",
+    "Create a formation": "Créer une formation",
+    "Finished courses": "Cours terminés",
+    "Taken formations": "Formations suivies"
 }
