--- a/lang/kr.json
+++ b/lang/kr.json
@@ -345,5 +345,26 @@
     "Select a provider": "제공자 선택",
     "Not assigned": "할당되지 않음",
     "Start Time": "시작 시간",
-    "End Time": "종료 시간"
+    "End Time": "종료 시간",
+    "Home courses list": "집에서 수업 목록",
+    "Course at home": "집에서 수업",
+    "My courses at home": "나의 집에서 수업",
+    "You have sent your request": "요청을 보냈습니다",
+    "Planning": "일정",
+    "Thank you for your order": "주문해 주셔서 감사합니다",
+    "Your order has been confirmed and will be processed as soon as possible.": "주문이 확인되었으며 가능한 빨리 처리될 것입니다.",
+    "Click": "클릭",
+    "here": "여기",
+    "to download your invoices.": "송장을 다운로드하려면",
+    "Copy the link below if you cannot click.": "클릭할 수 없는 경우 아래 링크를 복사하세요.",
+    "Please don't hesitate if you have any questions.": "질문이 있으시면 언제든지 문의해 주세요.",
+    "Kind regards": "감사합니다",
+    "All formations": "모든 형성",
+    "All courses": "모든 강의",
+    "Equipments list": "장비 목록",
+    "Create a room": "방 만들기",
+    "Rooms list": "방 목록",
+    "Create a formation": "형성 만들기",
+    "Finished courses": "완료된 강의",
+    "Taken formations": "수강한 형성"
 }
