Send a mail when we add a bonus to a wallet.

--- a/lang/es.json
+++ b/lang/es.json
@@ -374,5 +374,8 @@
     "Mark send": "Marcar como enviado",
     "Command marked as sent": "Comando marcado como enviado",
     "No actions available": "No hay acciones disponibles",
-    "Status": "Estado"
+    "Status": "Estado",
+    "Thank to your godchildren": "Gracias a tus ahijados",
+    "for his first command on the site, we have added a bonus of": "por su primer pedido en el sitio, hemos agregado un bono de",
+    "to your wallet.": "a tu billetera."
 }
