--- a/lang/fr.json
+++ b/lang/fr.json
@@ -387,5 +387,8 @@
     "Mark send": "Marquer comme envoyé",
     "Command marked as sent": "Commande marquée comme envoyée",
     "No actions available": "Aucune action disponible",
-    "Status": "Statut"
+    "Status": "Statut",
+    "Thank to your godchildren": "Grâce à vôtre filleul",
+    "for his first command on the site, we have added a bonus of": "pour sa première commande sur le site, nous avons ajouté un bonus de",
+    "to your wallet.": "à votre portefeuille."
 }
