--- a/lang/kr.json
+++ b/lang/kr.json
@@ -374,5 +374,8 @@
     "Mark send": "마크 전송",
     "Command marked as sent": "명령이 전송되었습니다",
     "No actions available": "사용 가능한 작업 없음",
-    "Status": "상태"
+    "Status": "상태",
+    "Thank to your godchildren": "귀하의 후견인들 덕분에",
+    "for his first command on the site, we have added a bonus of": "사이트에서 첫 번째 명령을 받아, 우리는 보너스를 추가했습니다",
+    "to your wallet.": "귀하의 지갑에."
 }
