Send a mail when home courses status change.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -390,5 +390,10 @@
     "Status": "Statut",
     "Thank to your godchildren": "Grâce à vôtre filleul",
     "for his first command on the site, we have added a bonus of": "pour sa première commande sur le site, nous avons ajouté un bonus de",
-    "to your wallet.": "à votre portefeuille."
+    "to your wallet.": "à votre portefeuille.",
+    "Your home course request": "Votre demande de cours à domicile",
+    "for the": "pour le",
+    "has been": "a été",
+    "accepted": "acceptée",
+    "rejected": "refusée"
 }
