Started main page.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -417,5 +417,7 @@
     "If you think this is a mistake, please contact us.": "Si vous pensez qu'il s'agit d'une erreur, veuillez nous contacter.",
     "Account restriction": "Restriction de compte",
     "banned": "banni",
-    "unbanned": "débanni"
+    "unbanned": "débanni",
+    "Together, we will give life your ideas.": "Ensemble, donnons vie à vos idées.",
+    "Discover what we have to offer": "Découvrez ce que nous avons à offrir"
 }
