--- a/lang/fr.json
+++ b/lang/fr.json
@@ -419,5 +419,17 @@
     "banned": "banni",
     "unbanned": "débanni",
     "Together, we will give life your ideas.": "Ensemble, donnons vie à vos idées.",
-    "Discover what we have to offer": "Découvrez ce que nous avons à offrir"
+    "Discover what we have to offer": "Découvrez ce que nous avons à offrir",
+    "Get yourself some high quality and professional branded kitchen tools": "Procurez-vous des outils de cuisine de marque de haute qualité et professionnels",
+    "Get teached by the best cooks in the world, and obtain certifications.": "Apprenez auprès des meilleurs cuisiniers du monde et obtenez des certifications.",
+    "Register to events, workshop, and more ..., also available on live streaming !": "Inscrivez-vous à des événements, des ateliers et plus encore ..., également disponible en streaming !",
+    "Learn how to cook, obtain access to lots of online courses !": "Apprenez à cuisiner, accédez à de nombreux cours en ligne !",
+    "Courses finished": "Cours terminés",
+    "Total orders": "Total des commandes",
+    "Formations taken": "Formations suivies",
+    "finished": "terminé",
+    "order": "commande",
+    "Upgrade to pro for ": "Passez à la version pro pour ",
+    "You upgraded your subscription.": "Vous avez mis à jour votre abonnement.",
+    "Free shipping everywhere": "Livraison gratuite partout"
 }
