--- a/lang/es.json
+++ b/lang/es.json
@@ -377,5 +377,10 @@
     "Status": "Estado",
     "Thank to your godchildren": "Gracias a tus ahijados",
     "for his first command on the site, we have added a bonus of": "por su primer pedido en el sitio, hemos agregado un bono de",
-    "to your wallet.": "a tu billetera."
+    "to your wallet.": "a tu billetera.",
+    "Become a Provider": "Convertirse en proveedor",
+    "Are you a cook, a teacher, or a professional in the food industry?": "¿Eres cocinero, profesor o profesional de la industria alimentaria?",
+    "Phone number": "Número de teléfono",
+    "Talk about yourself": "Habla de ti mismo",
+    "Send": "Enviar"
 }
