--- a/lang/fr.json
+++ b/lang/fr.json
@@ -419,5 +419,10 @@
     "banned": "banni",
     "unbanned": "débanni",
     "Together, we will give life your ideas.": "Ensemble, donnons vie à vos idées.",
-    "Discover what we have to offer": "Découvrez ce que nous avons à offrir"
+    "Discover what we have to offer": "Découvrez ce que nous avons à offrir",
+    "Become a Provider": "Devenir prestataire",
+    "Are you a cook, a teacher, or a professional in the food industry?": "Vous êtes cuisinier, enseignant ou professionnel de l'industrie alimentaire ?",
+    "Phone number": "Numéro de téléphone",
+    "Talk about yourself": "Parlez nous de vous",
+    "Send": "Envoyer"
 }
