--- a/lang/kr.json
+++ b/lang/kr.json
@@ -377,5 +377,10 @@
     "Status": "상태",
     "Thank to your godchildren": "귀하의 후견인들 덕분에",
     "for his first command on the site, we have added a bonus of": "사이트에서 첫 번째 명령을 받아, 우리는 보너스를 추가했습니다",
-    "to your wallet.": "귀하의 지갑에."
+    "to your wallet.": "귀하의 지갑에.",
+    "Become a Provider": "제공자가 되기",
+    "Are you a cook, a teacher, or a professional in the food industry?": "요리사, 교사 또는 식품 산업 전문가입니까?",
+    "Phone number": "전화 번호",
+    "Talk about yourself": "자기소개",
+    "Send": "보내기"
 }
