Added some translations.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -424,5 +424,7 @@
     "Are you a cook, a teacher, or a professional in the food industry?": "Vous êtes cuisinier, enseignant ou professionnel de l'industrie alimentaire ?",
     "Phone number": "Numéro de téléphone",
     "Talk about yourself": "Parlez nous de vous",
-    "Send": "Envoyer"
+    "Send": "Envoyer",
+    "Provider form": "Formulaire de prestataire",
+    "Become a provider request": "Demande de devenir prestataire"
 }
