--- a/lang/es.json
+++ b/lang/es.json
@@ -377,5 +377,6 @@
     "Status": "Estado",
     "Thank to your godchildren": "Gracias a tus ahijados",
     "for his first command on the site, we have added a bonus of": "por su primer pedido en el sitio, hemos agregado un bono de",
-    "to your wallet.": "a tu billetera."
+    "to your wallet.": "a tu billetera.",
+    "My messages": "Mis mensajes"
 }
