--- a/lang/fr.json
+++ b/lang/fr.json
@@ -417,5 +417,6 @@
     "If you think this is a mistake, please contact us.": "Si vous pensez qu'il s'agit d'une erreur, veuillez nous contacter.",
     "Account restriction": "Restriction de compte",
     "banned": "banni",
-    "unbanned": "débanni"
+    "unbanned": "débanni",
+    "My messages": "Mes messages"
 }
