Added some translation + removed right for Provider.

--- a/lang/es.json
+++ b/lang/es.json
@@ -377,5 +377,12 @@
     "Status": "Estado",
     "Thank to your godchildren": "Gracias a tus ahijados",
     "for his first command on the site, we have added a bonus of": "por su primer pedido en el sitio, hemos agregado un bono de",
-    "My messages": "Mis mensajes"
+    "My messages": "Mis mensajes",
+    "Get yourself some high quality and professional branded kitchen tools": "Consigue herramientas de cocina de marca de alta calidad y profesionales",
+    "Get teached by the best cooks in the world, and obtain certifications.": "Aprende de los mejores cocineros del mundo y obtén certificaciones",
+    "Register to events, workshop, and more ..., also available on live streaming !": "Regístrate en eventos, talleres y más..., ¡también disponibles en transmisión en vivo!",
+    "Learn how to cook, obtain access to lots of online courses !": "Aprende a cocinar, obtén acceso a muchos cursos en línea!",
+    "Together, we will give life your ideas.": "Juntos, daremos vida a tus ideas.",
+    "Discover what we have to offer": "Descubre lo que tenemos para ofrecer",
+    "Become a Provider": "Conviértete en proveedor"
 }
