--- a/lang/fr.json
+++ b/lang/fr.json
@@ -417,5 +417,14 @@
     "If you think this is a mistake, please contact us.": "Si vous pensez qu'il s'agit d'une erreur, veuillez nous contacter.",
     "Account restriction": "Restriction de compte",
     "banned": "banni",
-    "My messages": "Mes messages"
+    "My messages": "Mes messages",
+    "Together, we will give life your ideas.": "Ensemble, nous donnerons vie à vos idées.",
+    "Discover what we have to offer": "Découvrez ce que nous avons à offrir",
+    "Get yourself some high quality and professional branded kitchen tools": "Procurez-vous des outils de cuisine de marque de haute qualité et professionnels",
+    "Get teached by the best cooks in the world, and obtain certifications.": " Apprenez auprès des meilleurs cuisiniers du monde et obtenez des certifications.",
+    "Register to events, workshop, and more ..., also available on live streaming !": "Inscrivez-vous aux événements, ateliers et plus encore ..., également disponible en streaming !",
+    "Learn how to cook, obtain access to lots of online courses !": "Apprenez à cuisiner, accédez à de nombreux cours en ligne !",
+    "Become a Provider": "Devenir un prestataire",
+    "Phone number": "Numéro de téléphone",
+    "Send": "Envoyer"
 }
