Added some translations.

--- a/lang/es.json
+++ b/lang/es.json
@@ -384,5 +384,6 @@
     "Learn how to cook, obtain access to lots of online courses !": "Aprende a cocinar, obtén acceso a muchos cursos en línea!",
     "Together, we will give life your ideas.": "Juntos, daremos vida a tus ideas.",
     "Discover what we have to offer": "Descubre lo que tenemos para ofrecer",
-    "Become a Provider": "Conviértete en proveedor"
+    "Become a Provider": "Conviértete en proveedor",
+    "Assigned home courses": "Casa courses assignado"
 }
