--- a/lang/fr.json
+++ b/lang/fr.json
@@ -426,5 +426,6 @@
     "Learn how to cook, obtain access to lots of online courses !": "Apprenez à cuisiner, accédez à de nombreux cours en ligne !",
     "Become a Provider": "Devenir un prestataire",
     "Phone number": "Numéro de téléphone",
-    "Send": "Envoyer"
+    "Send": "Envoyer",
+    "Assigned home courses": "COurs à domicile assigné"
 }
