--- a/lang/kr.json
+++ b/lang/kr.json
@@ -389,5 +389,6 @@
     "Get yourself some high quality and professional branded kitchen tools": "고품질과 전문적인 브랜드의 주방 도구를 구입하세요",
     "Get teached by the best cooks in the world, and obtain certifications.": "세계 최고의 요리사로부터 가르침을 받고 자격증을 취득하세요",
     "Register to events, workshop, and more ..., also available on live streaming !": "이벤트, 워크숍 등에 등록하고 라이브 스트리밍으로도 이용할 수 있습니다",
-    "Learn how to cook, obtain access to lots of online courses !": "요리하는 법을 배우고 다양한 온라인 강좌에 접근하세요"
+    "Learn how to cook, obtain access to lots of online courses !": "요리하는 법을 배우고 다양한 온라인 강좌에 접근하세요",
+    "Assigned home courses": "송되었습니"
 }
