--- a/lang/es.json
+++ b/lang/es.json
@@ -385,5 +385,12 @@
     "Together, we will give life your ideas.": "Juntos, daremos vida a tus ideas.",
     "Discover what we have to offer": "Descubre lo que tenemos para ofrecer",
     "Become a Provider": "Conviértete en proveedor",
-    "Assigned home courses": "Casa courses assignado"
+    "Assigned home courses": "Casa courses assignado",
+    "Courses finished": "Cursos terminados",
+    "Total orders": "Total de pedidos",
+    "Formations taken": "Formaciones realizadas",
+    "finished": "terminado",
+    "order": "pedido",
+    "You are now subscribed !": "¡Ahora estás suscrito!",
+    "Upgrade to pro for ": "Actualiza a pro para "
 }
