--- a/lang/fr.json
+++ b/lang/fr.json
@@ -427,5 +427,6 @@
     "Become a Provider": "Devenir un prestataire",
     "Phone number": "Numéro de téléphone",
     "Send": "Envoyer",
-    "Assigned home courses": "COurs à domicile assigné"
+    "Assigned home courses": "Cours à domicile assigné",
+    "You are now subscribed !": "Vous êtes maintenant abonné !"
 }
