--- a/lang/kr.json
+++ b/lang/kr.json
@@ -390,5 +390,12 @@
     "Get teached by the best cooks in the world, and obtain certifications.": "세계 최고의 요리사로부터 가르침을 받고 자격증을 취득하세요",
     "Register to events, workshop, and more ..., also available on live streaming !": "이벤트, 워크숍 등에 등록하고 라이브 스트리밍으로도 이용할 수 있습니다",
     "Learn how to cook, obtain access to lots of online courses !": "요리하는 법을 배우고 다양한 온라인 강좌에 접근하세요",
-    "Assigned home courses": "송되었습니"
+    "Assigned home courses": "할당된 홈 코스",
+    "Courses finished": "완료된 강의",
+    "finished": "완료됨",
+    "Total orders": "총 주문",
+    "order": "주문",
+    "You are now subscribed !": "이제 구독하셨습니다!",
+    "And get a lot of advantages": "그리고 많은 혜택을 받으세요",
+    "Upgrade to pro for ": "프로로 업그레이드 "
 }
