--- a/lang/es.json
+++ b/lang/es.json
@@ -392,5 +392,46 @@
     "finished": "terminado",
     "order": "pedido",
     "You are now subscribed !": "¡Ahora estás suscrito!",
-    "Upgrade to pro for ": "Actualiza a pro para "
+    "Upgrade to pro for ": "Actualiza a pro para ",
+    "Formations": "Formaciones",
+    "Prestations": "Prestaciones",
+    "Invoices": "Facturas",
+    "Most students": "La mayoría de los estudiantes",
+    "Most courses": "La mayoría de los cursos",
+    "Coming soon": "Próximamente",
+    "Oldest": "El más antiguo",
+    "Ascending difficulty": "Dificultad ascendente",
+    "Descending difficulty": "Dificultad descendente",
+    "Ascending duration": "Duración ascendente",
+    "Descending duration": "Duración descendente",
+    "Only show courses or workshops": "Mostrar solo cursos o talleres",
+    "Send password link reset": "Enviar enlace de restablecimiento de contraseña",
+    "Reset password": "Restablecer la contraseña",
+    "Forgot password ?": "¿Olvidaste tu contraseña ?",
+    "Your home course request": "Votre demande de cours à domicile",
+    "for the": "pour le",
+    "has been": "a été",
+    "accepted": "acceptée",
+    "rejected": "refusée",
+    "Your account have been changed.": "Votre compte a été modifié.",
+    "If you did not change your account, please contact us.": "Si vous n'avez pas modifié votre compte, veuillez nous contacter.",
+    "Otherwise, you can ignore this message.": "Sinon, vous pouvez ignorer ce message.",
+    "Account modified. Check your email to verify your account.": "Compte modifié. Vérifiez votre email pour vérifier votre compte.",
+    "Subscription modified": "Abonnement modifié",
+    "Thanks you for your subscription.": "Merci pour votre abonnement.",
+    "We hope you'll enjoy our services.": "Nous espérons que vous apprécierez nos services.",
+    "We hope you enjoyed our services.": "Nous espérons que vous avez apprécié nos services.",
+    "Your subscription has been": "Votre abonnement a été",
+    "canceled": "annulé",
+    "resumed": "relancé",
+    "Subscription thank": "Merci pour votre abonnement",
+    "Godfather bonus": "Bonus de parrainage",
+    "Account modified": "Compte modifié",
+    "Order confirmed": "Commande confirmée",
+    "Order shipped": "Commande expédiée",
+    "Home course request": "Demande de cours à domicile",
+    "Your account have been": "Votre compte a été",
+    "If you think this is a mistake, please contact us.": "Si vous pensez qu'il s'agit d'une erreur, veuillez nous contacter.",
+    "Account restriction": "Restriction de compte",
+    "banned": "banni"
 }
