--- a/lang/kr.json
+++ b/lang/kr.json
@@ -397,5 +397,46 @@
     "order": "주문",
     "You are now subscribed !": "이제 구독하셨습니다!",
     "And get a lot of advantages": "그리고 많은 혜택을 받으세요",
-    "Upgrade to pro for ": "프로로 업그레이드 "
+    "Upgrade to pro for ": "프로로 업그레이드 ",
+    "Formations": "형성",
+    "Prestations": "서비스",
+    "Invoices": "송장",
+    "Most students": "대부분의 학생",
+    "Most courses": "대부분의 강의",
+    "Coming soon": "곧 출시 예정",
+    "Oldest": "가장 오래된",
+    "Ascending difficulty": "오름차순 난이도",
+    "Descending difficulty": "내림차순 난이도",
+    "Ascending duration": "오름차순 기간",
+    "Descending duration": "내림차순 기간",
+    "Only show courses or workshops": "강의 또는 워크숍만 표시",
+    "Send password reset link": "비밀번호 재설정 링크 보내기",
+    "Reset password": "비밀번호 재설정",
+    "Forgot password ?": "비밀번호를 잊으셨나요?",
+    "Your home course request": "가정에서 수업을 요청하였습니다",
+    "for the": "을 위해",
+    "has been": "되었습니다",
+    "accepted": "수락되었습니다",
+    "rejected": "거절되었습니다",
+    "Your account have been changed.": "귀하의 계정이 변경되었습니다",
+    "If you did not change your account, please contact us.": "계정을 변경하지 않으셨다면, 저희에게 연락해주십시오",
+    "Otherwise, you can ignore this message.": "그렇지 않다면, 이 메시지를 무시하셔도 됩니다",
+    "Account modified. Check your email to verify your account.": "계정이 수정되었습니다. 이메일을 확인하여 계정을 인증해주십시오",
+    "Subscription modified": "구독이 수정되었습니다",
+    "Thanks you for your subscription.": "구독해주셔서 감사합니다",
+    "We hope you'll enjoy our services.": "저희의 서비스를 즐겨주시길 바랍니다",
+    "We hope you enjoyed our services.": "저희의 서비스를 즐기셨기를 바랍니다",
+    "Your subscription has been": "귀하의 구독이",
+    "canceled": "취소되었습니다",
+    "resumed": "재개되었습니다",
+    "Subscription thank": "구독 감사 인사",
+    "Godfather bonus": "스폰서 보너스",
+    "Account modified": "계정이 수정되었습니다",
+    "Order confirmed": "주문이 확인되었습니다",
+    "Order shipped": "주문이 발송되었습니다",
+    "Home course request": "가정에서 수업을 요청하였습니다",
+    "Your account have been": "귀하의 계정이",
+    "If you think this is a mistake, please contact us.": "오류로 생각하신다면, 저희에게 연락해주십시오",
+    "Account restriction": "계정 제한",
+    "banned": "금지되었습니다"
 }
