--- a/lang/es.json
+++ b/lang/es.json
@@ -408,30 +408,31 @@
     "Send password link reset": "Enviar enlace de restablecimiento de contraseña",
     "Reset password": "Restablecer la contraseña",
     "Forgot password ?": "¿Olvidaste tu contraseña ?",
-    "Your home course request": "Votre demande de cours à domicile",
-    "for the": "pour le",
-    "has been": "a été",
-    "accepted": "acceptée",
-    "rejected": "refusée",
-    "Your account have been changed.": "Votre compte a été modifié.",
-    "If you did not change your account, please contact us.": "Si vous n'avez pas modifié votre compte, veuillez nous contacter.",
-    "Otherwise, you can ignore this message.": "Sinon, vous pouvez ignorer ce message.",
-    "Account modified. Check your email to verify your account.": "Compte modifié. Vérifiez votre email pour vérifier votre compte.",
-    "Subscription modified": "Abonnement modifié",
-    "Thanks you for your subscription.": "Merci pour votre abonnement.",
-    "We hope you'll enjoy our services.": "Nous espérons que vous apprécierez nos services.",
-    "We hope you enjoyed our services.": "Nous espérons que vous avez apprécié nos services.",
-    "Your subscription has been": "Votre abonnement a été",
-    "canceled": "annulé",
-    "resumed": "relancé",
-    "Subscription thank": "Merci pour votre abonnement",
-    "Godfather bonus": "Bonus de parrainage",
-    "Account modified": "Compte modifié",
-    "Order confirmed": "Commande confirmée",
-    "Order shipped": "Commande expédiée",
-    "Home course request": "Demande de cours à domicile",
-    "Your account have been": "Votre compte a été",
-    "If you think this is a mistake, please contact us.": "Si vous pensez qu'il s'agit d'une erreur, veuillez nous contacter.",
-    "Account restriction": "Restriction de compte",
-    "banned": "banni"
+    "Your home course request": "Tu solicitud de curso a domicilio",
+    "for the": "para el",
+    "has been": "ha sido",
+    "accepted": "aceptada",
+    "rejected": "rechazada",
+    "Your account have been changed.": "Tu cuenta ha sido modificada.",
+    "If you did not change your account, please contact us.": "Si no has modificado tu cuenta, por favor contáctanos.",
+    "Otherwise, you can ignore this message.": "De lo contrario, puedes ignorar este mensaje.",
+    "Account modified. Check your email to verify your account.": "Cuenta modificada. Verifica tu cuenta en tu correo electrónico.",
+    "Subscription modified": "Suscripción modificada",
+    "Thanks you for your subscription.": "Gracias por tu suscripción.",
+    "We hope you'll enjoy our services.": "Esperamos que disfrutes de nuestros servicios.",
+    "We hope you enjoyed our services.": "Esperamos que hayas disfrutado de nuestros servicios.",
+    "Your subscription has been": "Tu suscripción ha sido",
+    "canceled": "cancelada",
+    "resumed": "reanudada",
+    "Subscription thank": "Gracias por tu suscripción",
+    "Godfather bonus": "Bono de padrino",
+    "Account modified": "Cuenta modificada",
+    "Order confirmed": "Orden confirmada",
+    "Order shipped": "Orden enviada",
+    "Home course request": "Solicitud de curso a domicilio",
+    "Your account have been": "Tu cuenta ha sido",
+    "If you think this is a mistake, please contact us.": "Si crees que esto es un error, por favor contáctanos.",
+    "Account restriction": "Restricción de cuenta",
+    "banned": "prohibida",
+    "Email sent successfully !": "¡Correo electrónico enviado con éxito!"
 }
