--- a/lang/kr.json
+++ b/lang/kr.json
@@ -438,5 +438,6 @@
     "Your account have been": "귀하의 계정이",
     "If you think this is a mistake, please contact us.": "오류로 생각하신다면, 저희에게 연락해주십시오",
     "Account restriction": "계정 제한",
-    "banned": "금지되었습니다"
+    "banned": "금지되었습니다",
+    "Email sent successfully !": "이메일이 성공적으로 전송되었습니다!"
 }
